now npm start runs 'snd'

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "concurrently \"cd client && npm start\" \"cd server && node server.js\""
+    "start": "concurrently \"cd client && npm start\" \"cd server && snd server.js\""
   },
   "author": "",
   "license": "ISC"
