--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
   "main": "index.js",
   "dependencies": {
     "concurrently": "^3.5.0",
+    "nodemon": "^1.11.0",
     "react-bootstrap-table": "^4.0.0"
   },
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "concurrently \"cd client && npm start\" \"cd server && node server.js\""
+    "start": "concurrently \"cd client && npm start\" \"cd server && nodemon server.js\""
   },
   "author": "",
   "license": "ISC"
