--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,7 @@
     "react-table": "^6.5.3"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "NODE_ENV=development react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
